--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Exterminate!</title>
         <link href="css/main.css"rel="stylesheet">
-        <meta name="utf-8">
-        <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=deice-width,initial-scale-1">
+            
     </head>
     <body>
         
