Added type.css, grid.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Exterminate!</title>
+        <link href="css/type.css"rel="stylesheet">
+        <link href="css/grid.css"rel="stylesheet">
         <link href="css/main.css"rel="stylesheet">
         <meta name="viewport" content="width=deice-width,initial-scale-1">
             
